eks/snippets/cr-1/gb-pod-affnity-deployment.yaml
# Deployment Manifest with Node Affinity and Toleration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-training-job
spec:
  replicas: 3
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - matchExpressions:
                - key: karpenter.sh/nodepool
                  operator: In
                  values: ["ml-arm-nodes"]
      tolerations:
        - key: workload-type
          operator: Equal
          value: ml
          effect: NoSchedule
      containers:
        - name: ml-container
          image: ml-training:latest
          resources:
            requests:
              cpu: "8"
              memory: "16Gi"
